--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "alpha-test",
+  "homepage": "https://daniilmarinovich.github.io/alpha-store",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +10,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "prettier": "prettier --write \"./**/*.{js,jsx,css}\"",
-    "coverage": "react-scripts test --coverage --watchAll=false"
+    "coverage": "react-scripts test --coverage --watchAll=false",
+    
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -33,6 +37,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "prettier": "^3.7.1",
     "vite": "^7.2.4"
